# cppdb

./: .gitignore  CMakeLists.txt  README.md  class_diagram_server.drawio  client_workflow.drawio  server_workflow.drawio
nextdb/client/: main.cpp
nextdb/db/include/: BTHandler.h  BTree.h  BTreeNode.h  Content.h  DBInterface.h  DbHandler.h  types.h
nextdb/db/src/: BTHandler.cpp  BTree.cpp  BTreeNode.cpp  Content.cpp
tests/: BTreeTest.cpp  Makefile
